--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
              <div class="col">
                 <div class="contact-info">
                     <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                    <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
-                    <p><i class="uil uil-phone"></i> Tel: +250 708 770 000</p>
+                    <p><i class="uil uil-envelope"></i> Email: mohamedali@gmail.com</p>
+                    <p><i class="uil uil-phone"></i> Tel: +201156848662</p>
                 </div>
              </div>
              <div class="col">
